# sexism-classification

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: model_selection.ipynb  preprocessing.ipynb  searchmodel.ipynb  study_HN.ipynb
notebooks/.ipynb_checkpoints/: model_selection-checkpoint.ipynb
src/components/: Data-Injection.py
